completed subprime logistic regression perf ~ fico

--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ Its intent is to provide prospective employers with concrete evidence of my abil
 * 2018-07-08 Correspondence analysis of categorical variables
 * 2018-07-11 Revised qq plots to take advantage of new ggplot2 v 3.0.0 
   feature, added R package to tools chapter, new credential on this page
+* 2018-07-14 Logistic regression of FICO on performance
 
 ## Literate programming: the tight integration of code and text
 
