--- a/03-failure-part2.Rmd
+++ b/03-failure-part2.Rmd
@@ -257,7 +257,7 @@ library(RMySQL)
 drv <- dbDriver("MySQL")
 con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
 cs <- as.tibble(dbGetQuery(con, "SELECT grade,perf FROM loans"))# WHERE grade = 'A+' OR grade = 'AP'"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of credit grade (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
+(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of credit grade (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
 chisq.test(table(cs))
 
 ``` 
