--- a/index.Rmd
+++ b/index.Rmd
@@ -26,6 +26,7 @@ Its intent is to provide prospective employers with concrete evidence of my abil
 * 2018-07-11 Revised qq plots to take advantage of new ggplot2 v 3.0.0 
   feature, added R package to tools chapter, new credential on this page
 * 2018-07-14 Logistic regression of FICO on performance
+* 2018-07-21 added PH125.6x: Data Science: Wrangling certificate
 
 ## Literate programming: the tight integration of code and text
 
@@ -65,6 +66,7 @@ I've completed the following online courses, to consolidate and expand my previo
 !["HarvardX PH125.3x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.3x+Certificate+%7C+edX.png)
 !["HarvardX PH125.4x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.4x+Certificate+%7C+edX.png)
 ![Harvard PH125.5x, Productivity, certificate issuance pending](https://s3-us-west-2.amazonaws.com/tuva/HarvardX%3B+PH125.5x.png)
+ ![HarvardX PH125.6x: Data Science: Wrangling](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.6x+Certificate+%7C+edX.png)
  
 ![HarvardX PH559x Certificate](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH559x+Certificate+%7C+edX.png)
 
